@@ -14,17 +14,18 @@ import us.lsi.mochila.datos.SolucionMochila;
 public class TestMochilaAGRange {
 
 	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 		
 		AlgoritmoAG.ELITISM_RATE  = 0.30;
 		AlgoritmoAG.CROSSOVER_RATE = 0.8;
 		AlgoritmoAG.MUTATION_RATE = 0.7;
 		AlgoritmoAG.POPULATION_SIZE = 50;
 		
-		StoppingConditionFactory.NUM_GENERATIONS = 5000;
+		StoppingConditionFactory.NUM_GENERATIONS = 510000;
 		StoppingConditionFactory.SOLUTIONS_NUMBER_MIN = 1;
 		StoppingConditionFactory.FITNESS_MIN = 623;
-		StoppingConditionFactory.stoppingConditionType = StoppingConditionFactory.StoppingConditionType.SolutionsNumber;
+		StoppingConditionFactory.stoppingConditionType = 
+				StoppingConditionFactory.StoppingConditionType.SolutionsNumber;
 		
 		DatosMochila.capacidadInicial = 78;
 		DatosMochilaAGRange p = new DatosMochilaAGRange("ficheros/objetosmochila.txt");
